--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,19 @@
-python-telegram-bot==20.7
 Flask==3.1.2
+python-telegram-bot==20.7
 requests==2.32.5
 gunicorn==21.2.0
+httpx==0.25.2
+httpcore==1.0.9
+click==8.3.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+Werkzeug==3.1.4
+blinker==1.9.0
+markupsafe==3.0.3
+urllib3==2.6.2
+idna==3.11
+charset_normalizer==3.4.4
+certifi==2026.1.4
+anyio==4.12.0
+sniffio==1.3.1
+packaging==25.0
